# Web_Search_Agent

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.py
app/agent/: agent.py  generate_answer_node.py  graph.py  reasoning_node.py  retrieve_knowledge_node.py  search_node.py  state.py  store_knowledge_node.py  summarization_node.py
app/config/: constants.py  llm_providers.py  settings.py
app/prompts/: answer_prompt.py  reasoning_prompt.py  summarization_prompt.py
app/schemas/: ReasoningResult.py  credentials.py  knowledge.py  llm_client.py  search_history.py  search_response.py  search_result.py
app/services/: embedding_service.py  generate_answer.py  history_service.py  knowledge_service.py  llm_client_factory.py  llm_service.py  qdrant_service.py  quota_service.py  reasoning_service.py  search_service.py  summarization_service.py
app/telemetry/: logfire_config.py
app/tools/: tavily_tool.py
app/ui/: home.py  search.py  sidebar.py
